--- a/.github/workflows/woo-page-deploy.yml
+++ b/.github/workflows/woo-page-deploy.yml
@@ -7,8 +7,8 @@ env: # Change these to your preferences any image url can also be a base encoded
   USE_GITHUB_REPOSITORY_NAME_AS_PATH_PREFIX: "true"
 
   GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
-  API_BASE_URL: "https://opencatalogi.accept.commonground.nu/apps/opencatalogi/api"
-  NL_DESIGN_THEME_CLASSNAME: "open-webconcept-theme"
+  API_BASE_URL: "https://zuiddrecht.commonground.nu/apps/opencatalogi/api"
+  NL_DESIGN_THEME_CLASSNAME: "conduction-theme"
   DEV_ENVIRONMENT: "false"
   SHOW_CATEGORY: "true"
   SHOW_ORGANIZATION: "true"
